Renamed Submit to Button as it should work for all buttons.

--- a/PageObject.Tests/PageObject.Tests.csproj
+++ b/PageObject.Tests/PageObject.Tests.csproj
@@ -83,7 +83,7 @@
     <Compile Include="Elements\CheckboxTest.cs" />
     <Compile Include="Elements\ElementTest.cs" />
     <Compile Include="Elements\MultiListTest.cs" />
-    <Compile Include="Elements\SubmitTest.cs" />
+    <Compile Include="Elements\ButtonTest.cs" />
     <Compile Include="Elements\TestPage.cs" />
     <Compile Include="Elements\ListTest.cs" />
     <Compile Include="Elements\TextTest.cs" />
