--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Elements\ElementFactory.cs" />
     <Compile Include="Elements\ElementAttribute.cs" />
     <Compile Include="Elements\MultiList.cs" />
-    <Compile Include="Elements\Submit.cs" />
+    <Compile Include="Elements\Button.cs" />
     <Compile Include="Elements\List.cs" />
     <Compile Include="Elements\Checkbox.cs" />
     <Compile Include="Elements\Text.cs" />
