--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -65,7 +65,7 @@
   <ItemGroup>
     <Compile Include="Elements\BaseElement.cs" />
     <Compile Include="Elements\RadioButtons.cs" />
-    <Compile Include="Elements\Input.cs" />
+    <Compile Include="Elements\Field.cs" />
     <Compile Include="Elements\Element.cs" />
     <Compile Include="Elements\ElementFactory.cs" />
     <Compile Include="Elements\ElementAttribute.cs" />
