--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -76,6 +76,8 @@
     <Compile Include="Elements\Checkbox.cs" />
     <Compile Include="Elements\Text.cs" />
     <Compile Include="EnvironmentVariables.cs" />
+    <Compile Include="Finders\ElementFinder.cs" />
+    <Compile Include="Finders\FieldFinder.cs" />
     <Compile Include="PageAtAttribute.cs" />
     <Compile Include="PageObjectException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
