--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Elements\BaseElement.cs" />
+    <Compile Include="Elements\ElementList.cs" />
     <Compile Include="Elements\Link.cs" />
     <Compile Include="Elements\RadioButtons.cs" />
     <Compile Include="Elements\Field.cs" />
@@ -76,7 +77,9 @@
     <Compile Include="Elements\Checkbox.cs" />
     <Compile Include="Elements\Text.cs" />
     <Compile Include="EnvironmentVariables.cs" />
+    <Compile Include="Finders\LinkFinder.cs" />
     <Compile Include="Finders\ElementFinder.cs" />
+    <Compile Include="Finders\ButtonFinder.cs" />
     <Compile Include="Finders\FieldFinder.cs" />
     <Compile Include="PageAtAttribute.cs" />
     <Compile Include="PageObjectException.cs" />
